<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_complaint"
            android:icon="@drawable/ic_confirmation"
            android:title="@string/nav_header_comp1" />
        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_analysis"
            android:title="@string/nav_header_comp2" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_signout"
            android:title="@string/nav_header_comp3" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_user"
            android:title="@string/nav_header_comp4" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
