<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.root.proto2.Activities.LoginActivity">

            <!-- Login progress -->

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        app:srcCompat="@drawable/firebaseauthentication" />

                    <EditText
                        android:id="@+id/phoneno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:hint="@string/prompt_phome"
                        android:inputType="phone"
                        android:maxEms="10" />

                    <Button
                        android:id="@+id/signin"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="40dp"
                        android:background="@color/colorGreen"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/googlesignin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/btn_google_signin_dark_hdpi"
                        android:text="@string/action_googlesign_in"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/add_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        android:layout_margin="20dp"
                        android:drawableTop="@drawable/ic_person_add"
                        android:nextFocusDown="@string/add_user"
                        android:text="@string/add_user" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
